--- a/components/headers/Header1.scss
+++ b/components/headers/Header1.scss
@@ -6,15 +6,25 @@
   a{
     font-family: sans-serif;
     text-decoration: none;
+    color: #000;
+    font-weight: 500;
+    &:hover{
+      color: #e63b49;
+    }
   }
+    &__logo{
+        padding-left: 2rem;
+        font-size: 2rem;
+        font-weight: bold;
+        color: #000;
+      a{
+        font-family: "Playball",cursive;
+      }
+    }
   &__collections-nav{
     display: flex;
-    justify-content: start;
-    width: 50%;
-    margin: 0 auto;
-    padding: 0;
-    list-style: none;
-    padding-right: 2rem;
+    justify-content: flex-start;
+    padding: 20px 2rem;
     a{
       padding-right: 1rem;
     }
